# python-playground

./: .gitignore  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
01_python_core/: 规划说明.md
01_python_core/01_basics/01_comments/: 01_what_is_comment.py  02_comment_purpose.py  03_single_line_comment.py  04_multi_line_comment.py  README.md
01_python_core/01_basics/02_variables/: 01_what_is_variable.py  02_variable_creation.py  03_naming_rules.py  04_variable_modification.py  05_constants.py  README.md
01_python_core/01_basics/03_types_conversion/: 01_number_systems.py  02_different_base.py  03_binary_to_decimal.py  04_decimal_to_binary.py  05_octal_to_decimal.py  06_decimal_to_hex.py  07_binary_to_hex.py  08_hex_to_binary.py  README.md
01_python_core/01_basics/04_data_types/: 01_int_type.py  02_float_type.py  03_bool_type.py  04_string_intro.py  05_type_conversion.py  06_encoding_decoding.py  README.md
01_python_core/01_basics/05_input_output/: 01_input.py  (+2 more)
01_python_core/docs/: 01-python-basics.md  02-control-flow.md  03-data-structures.md  04-functions.md  05-file-operations.md  06-object-oriented-programming.md  07-oop-features.md  08-exception-handling.md  09-modules-and-packages.md  10-advanced-features.md  11-concurrency.md  12-network-programming.md  13-regular-expressions.md  14-type-system-basics.md  15-type-system-stdlib.md  16-type-system-pydantic.md  17-type-system-checkers.md
02_data_analytics/01_numpy/: 01_intro.py
02_data_analytics/docs/: numpy_tutorial.md  pandas_tutorial.md  visualization_tutorial.md
03_langchain_foundation/: README.md  __init__.py
03_langchain_foundation/01_module1/: __init__.py
03_langchain_foundation/02_module2/: __init__.py
03_langchain_foundation/03_module3/: __init__.py
03_langchain_foundation/docs/: README.md  学习计划.md
03_langchain_foundation/utils/: __init__.py
04_pydantic_ai/: README.md  __init__.py
04_pydantic_ai/01_basics/: 01_hello_world.py  02_structured_output.py  README.md  __init__.py
04_pydantic_ai/02_agents/: 01_conversation.py  README.md  __init__.py
04_pydantic_ai/03_tools/: 01_tools_example.py  02_dependency_injection.py  README.md  __init__.py
04_pydantic_ai/04_models/: 01_model_selection.py  README.md  __init__.py
04_pydantic_ai/05_advanced/: 01_streaming.py  02_validation.py  README.md  __init__.py
04_pydantic_ai/docs/: 01_快速开始.md  02_核心概念.md  03_Agent系统.md  04_工具系统.md  05_依赖注入.md  06_模型支持.md  07_结构化输出.md  08_流式传输.md  09_图工作流.md  10_持久化执行.md  11_人机协作.md  12_可观测性.md  13_测试和评估.md  14_最佳实践.md  15_实战案例.md  README.md
04_pydantic_ai/examples/: README.md
docs/: agent-skills.md  uv-tutorial.md
(+497 files in other folders)
