[project]
name = "python-playground"
version = "0.1.0"
description = "Python 学习项目：包括基础语法、数据分析、高级特性等"
requires-python = ">=3.12"
dependencies = [
    # 数据分析核心库
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",

    # Jupyter 支持
    "jupyter>=1.1.0",
    "ipython>=8.30.0",

    # 代码质量
    "ruff>=0.8.0",

    # 实用工具
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["01_python_core", "02_data_analytics", "utils"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
