[project]
name = "python-playground"
version = "0.1.0"
description = "Python 学习项目：包括基础语法、数据分析、高级特性等"
requires-python = ">=3.12"
dependencies = [
    # 数据分析核心库
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "scipy>=1.16.3",

    # Jupyter 支持
    "jupyter>=1.1.0",
    "jupyterlab>=4.5.1",
    "ipython>=8.30.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",

    # 代码质量
    "ruff>=0.8.0",

    # 实用工具
    "requests>=2.32.0",
    "python-dotenv>=0.9.9",

    # 类型验证和数据解析
    "pydantic>=2.0.0",

    # LangChain 核心库
    "langchain>=1.1.3",
    "langchain-core>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.3",
    "langgraph-cli>=0.4.9",
    "langgraph-api>=0.5.37",

    # LangChain 集成
    "langchain-openai>=1.1.1",
    "langchain-anthropic>=1.0.3",
    "langchain-google-vertexai>=3.0.3",
    "langchain-google-genai>=3.1.0",
    "langchain-model-profiles>=0.0.4",
    "langchain-tavily>=0.2.13",
    "langchain-mcp-adapters>=0.1.13",

    # LangChain 工具和服务
    "tavily-python>=0.7.13",
    "tavily>=1.1.0",
    "mcp>=1.21.1",
    "langsmith>=0.4.43",

    # 文档处理
    "pypdf>=6.2.0",

    # 音频处理
    "sounddevice>=0.5.3",

    # Pydantic AI
    "pydantic-ai>=0.0.14",
    "pydantic-ai-slim[openai]>=0.0.14",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["01_python_core", "02_data_analytics", "03_langchain_foundation", "04_pydantic_ai", "utils"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
